[tool.poetry]
name = "repl_python3_zona-bets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
results = "^0.1.1588569394"
ariadne = "^0.15.1"
gql = "^3.2.0"
boto3 = "^1.22.6"
requests-aws4auth = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
